--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- navigation -->
         <header>
             <h1>
-                Hori<span class="seo">seo</span>n
+                <a href="index.html">Hori<span class="seo">seo</span>n</a>
             </h1>
             <nav>
                 <!-- Unordered List Element -->
@@ -35,13 +35,13 @@
         <!-- Content -->
         <section class="content">
             <!-- "Search Engine Optimization" section -->
-            <article id="search-engine-optimization" class="search-engine-optimization">
+            <aside id="search-engine-optimization" class="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" alt="SEO Outline" class="float-left" />
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </p>
-            </article>
+            </aside>
 
             <!-- "Online Reputation Managment" section -->
             <article id="online-reputation-management" class="online-reputation-management">
